fix: set black color in dark mode

--- a/app/groom/main.css
+++ b/app/groom/main.css
@@ -10,6 +10,10 @@ body {
     color: #fff;
   }
 
+  .guestbook-message-form input {
+    color: #000;
+  }
+
   .guestbook-message-list li {
     background-color: rgb(51 65 85);
   }
